@startuml user
title DeviceHub — src/user

package "Qt Network" {
  class QNetworkAccessManager
}

struct UserProfile {
  +login: QString
  +displayName: QString
  +avatarUrl: QString
  +publicKey: QString
  +email: QString
  +telegramChatId: QString
}

struct ProfileEdits {
  +displayName: QString
  +avatarUrl: QString
  +email: QString
  +telegramChatId: QString
}

struct FriendRequestInfo {
  +id: qint64
  +requesterLogin: QString
  +createdAt: QString
}

class UserProfileClient {
  +fetchProfile(token: QString, login: QString)
  +updateOwnProfile(token: QString, edits: ProfileEdits)
  +publishPublicKey(token: QString, publicKey: QString)
  +sendFriendRequest(token: QString, recipientLogin: QString)
  +listIncomingFriendRequests(token: QString)
  +acceptFriendRequest(token: QString, requestId: qint64)
  +declineFriendRequest(token: QString, requestId: qint64)
  +listFriends(token: QString)
  +removeFriend(token: QString, login: QString)
  +uploadAvatar(token: QString, contentType: QString, data: QByteArray)
  +fetchAvatar(login: QString)
  .. signals ..
  +profileReceived(profile: UserProfile)
  +profileUpdated(profile: UserProfile)
  +friendRequestSent(recipientLogin: QString, status: QString)
  +incomingFriendRequestsListed(requests: QList<FriendRequestInfo>)
  +friendRequestAccepted(requestId: qint64)
  +friendRequestDeclined(requestId: qint64)
  +friendsListed(logins: QStringList)
  +friendRemoved(login: QString)
  +avatarUploaded(avatarUrl: QString)
  +avatarFetched(login: QString, data: QByteArray, contentType: QString)
  +avatarFetchFailed(login: QString)
  +errorOccurred(message: QString)
}
UserProfileClient *-- QNetworkAccessManager : owns
UserProfileClient ..> UserProfile : emits
UserProfileClient ..> ProfileEdits : updateOwnProfile() >
UserProfileClient ..> FriendRequestInfo : emits (issue #187, Фаза 3)
UserProfileClient ..> "user-service" : GET /users/{login}/profile,\nPATCH /users/me
UserProfileClient ..> "user-service" : POST /friends/requests,\nGET /friends/requests,\nPOST /friends/requests/{id}/accept|decline,\nGET /friends, DELETE /friends/{login}\n(issue #187)
UserProfileClient ..> "user-service" : POST /profile/avatar,\nGET /users/{login}/avatar\n(issue #384/#442)

class AvatarCache {
  +AvatarCache(client: UserProfileClient&)
  +imageFor(login: QString) : optional<QImage>
  +invalidate(login: QString)
  .. signals ..
  +avatarReady(login: QString)
}
AvatarCache --> UserProfileClient : uses (&)
note bottom of AvatarCache
  Issue #384/#442: единственная точка,
  знающая про UserProfileClient::
  fetchAvatar()/avatarFetched()/
  avatarFetchFailed() — FooterBar/
  MemberListPanel/ChatMessageRow/
  ProfileDialog делят один экземпляр
  (владеет MainWindow), вызывают только
  imageFor(), сам сетевой клиент не
  трогают. imageFor() на промахе кэша
  сама запускает fetchAvatar() (если
  такой запрос ещё не в процессе и
  раньше не завершился неудачей) и
  возвращает nullopt — вызывающая
  сторона продолжает показывать
  букву-заглушку (ui_icons::
  communityAvatarIcon()/
  memberAvatarIcon()) до avatarReady().
  Отрисовкой (круглая маска, presence-
  точка) не занимается — это
  ui_icons::realAvatarIcon()/
  realMemberAvatarIcon() (см. ui.puml).
end note
note bottom of ProfileEdits
  issue #156/#174: email/telegramChatId —
  заданы, значит, вход по одноразовому
  коду доступен через этот канал для
  этого аккаунта (Telegram в приоритете
  на сервере, если задан и настроен);
  сгруппированы с displayName/avatarUrl
  в структуру (правило проекта про
  количество аргументов — четыре
  однотипных QString подряд легко
  перепутать местами).
end note

package "libsodium" {
  class "crypto_box_keypair()" as CryptoBoxKeypair
}

class IdentityKeyStore {
  +IdentityKeyStore(storageDir: QString, login: QString)
  +publicKeyBase64() : QString
  +secretKeyBytes() : QByteArray
  -loadIfExists() : bool
  -generateAndPersist()
}
IdentityKeyStore ..> CryptoBoxKeypair : generates via
IdentityKeyStore ..> "local file" : persists secret key to\n(QStandardPaths::AppDataLocation)

note right of UserProfileClient
  Separate from AuthClient
  (auth-service) and ChatRestClient
  (chat-service) — user-service owns
  account/profile data, its own base
  URL (USER_SERVICE_URL). Async only,
  same pattern as the other REST
  clients — result comes back via
  signals, never blocks the GUI
  thread.

  updateOwnProfile() (issue #110)
  always writes to the token's own
  subject server-side — there's no
  way to pass a different login, so
  a caller can never edit someone
  else's profile through this class.

  publishPublicKey() (issue #136,
  E2E encryption Phase 1) is a
  separate call rather than a third
  parameter on updateOwnProfile() —
  driven by a different trigger
  (IdentityKeyStore at login time,
  not the user-initiated profile-
  edit flow).
end note

note right of IdentityKeyStore
  E2E encryption Phase 1 (issue
  #136) — infrastructure only, no
  channel is yet marked encrypted.
  One X25519 keypair per login;
  the secret key never leaves this
  store or crosses the network.
  Public key is derived from the
  persisted secret key on load
  (crypto_scalarmult_base), not
  also stored, so the two halves
  can't drift apart.

  No multi-device, rotation, or
  backup/recovery in this phase —
  a new login on another machine
  means a new identity.
end note

@enduml
